--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 24
+    buildToolsVersion '23.0.3'
 
     defaultConfig {
         applicationId "com.exun.thaparexpress"
         minSdkVersion 19
         targetSdkVersion 22
-        versionCode 2
-        versionName "0.2"
+        versionCode 12
+        versionName "0.3"
     }
     buildTypes {
         release {
@@ -20,10 +20,19 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:22.+'
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:design:22.2.0'
-    compile 'com.android.support:recyclerview-v7:22.2.+'
-    compile 'com.android.support:cardview-v7:22.2.0'
     compile project(':volley')
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:design:24.1.1'
+    compile 'com.android.support:recyclerview-v7:24.1.1'
+    compile 'com.android.support:cardview-v7:24.1.1'
+    compile 'com.google.android.gms:play-services-auth:9.4.0'
+    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
+    // glide is added to load the google profile image. Ignore if you want
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
+
+
+
+apply plugin: 'com.google.gms.google-services'
