--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <application
         android:name=".adapter.AppController"
@@ -11,6 +12,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/MyMaterialTheme">
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name=".activity.MainActivity"
             android:configChanges="orientation|screenSize"
@@ -43,6 +49,13 @@
             android:windowSoftInputMode="adjustPan"
             android:configChanges="orientation|screenSize"/>
         <activity
+            android:name=".activity.SignUp"
+            android:label="SignUp"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustPan"
+            android:configChanges="orientation|screenSize"/>
+
+        <activity
             android:name=".activity.Societies"
             android:label="@string/title_activity_societies"
             android:launchMode="singleTop"
@@ -52,6 +65,16 @@
             android:label="Events"
             android:launchMode="singleTop"
             android:configChanges="orientation|screenSize"/>
+        <activity
+            android:name=".activity.TimeTable"
+            android:label="TimeTable"
+            android:theme="@style/MyMaterialTheme"
+            android:configChanges="orientation|screenSize">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activity.TimeTable" />
+            </activity>
+
         <activity
             android:name=".activity.SocDetails"
             android:label="Society Members"
