--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,16 +22,20 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':volley')
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:design:24.1.1'
-    compile 'com.android.support:recyclerview-v7:24.1.1'
-    compile 'com.android.support:cardview-v7:24.1.1'
-    compile 'com.google.android.gms:play-services-auth:9.4.0'
+    // glide is added to load the google profile image. Ignore if you want
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'com.google.android.gms:play-services-auth:9.6.1'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile 'de.hdodenhof:circleimageview:1.3.0'
-    // glide is added to load the google profile image. Ignore if you want
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile 'com.google.firebase:firebase-messaging:9.6.0'
+
 }
+
 
 
 
