--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:label="@string/app_name"
         android:theme="@style/MyMaterialTheme">
 
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -96,6 +98,19 @@
         <activity
             android:name=".activity.FullBlog"
             android:label="ThaparLogs"
+            android:theme="@style/MyMaterialTheme"
+            android:configChanges="orientation|screenSize">
+        </activity>
+        <activity
+            android:name=".activity.MessMenu"
+            android:label="MessMenu"
+            android:theme="@style/MyMaterialTheme"
+            android:configChanges="orientation|screenSize">
+        </activity>
+
+        <activity
+            android:name=".activity.Teachers"
+            android:label="Teachers"
             android:theme="@style/MyMaterialTheme"
             android:configChanges="orientation|screenSize">
         </activity>
