--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion '23.0.3'
+    compileSdkVersion 25
+    buildToolsVersion '24.0.2'
 
     defaultConfig {
         applicationId "com.exun.thaparexpress"
-        minSdkVersion 19
+        minSdkVersion 15
         targetSdkVersion 22
         versionCode 14
         versionName "0.3"
@@ -19,22 +19,33 @@ android {
     }
 }
 
+repositories {
+    maven {
+        url "https://mint.splunk.com/gradle/"
+    }
+    maven {
+        url "https://jitpack.io"
+    }
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':volley')
     // glide is added to load the google profile image. Ignore if you want
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.android.support:recyclerview-v7:24.2.0'
-    compile 'com.android.support:cardview-v7:24.2.0'
-    compile 'com.google.android.gms:play-services-auth:9.6.1'
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.android.support:design:25.0.0'
+    compile 'com.android.support:recyclerview-v7:25.0.0'
+    compile 'com.android.support:cardview-v7:25.0.0'
+    compile 'com.google.android.gms:play-services-auth:9.8.0'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.google.firebase:firebase-messaging:9.6.0'
+    compile 'com.github.ybq:Android-SpinKit:1.0.4'
 
 }
+
 
 
 
