--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,11 +43,9 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.google.firebase:firebase-messaging:9.6.0'
     compile 'com.github.ybq:Android-SpinKit:1.0.4'
+    compile 'com.mikhaellopez:circularimageview:3.0.2'
+
 
 }
 
-
-
-
-
-apply plugin: 'com.google.gms.google-services'
+apply plugin:'com.google.gms.google-services'
