--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,9 @@ repositories {
     maven {
         url "https://mint.splunk.com/gradle/"
     }
+    repositories {
+        mavenCentral()
+    }
     maven {
         url "https://jitpack.io"
     }
@@ -30,7 +33,6 @@ repositories {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':volley')
     // glide is added to load the google profile image. Ignore if you want
     compile 'com.android.support:appcompat-v7:25.0.0'
     compile 'com.android.support:design:25.0.0'
@@ -44,8 +46,8 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:9.6.0'
     compile 'com.github.ybq:Android-SpinKit:1.0.4'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
-
-
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
 
 apply plugin:'com.google.gms.google-services'
