--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,15 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '24.0.2'
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "com.exun.thaparexpress"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 25
         versionCode 14
         versionName "0.3"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -36,7 +37,7 @@ dependencies {
     compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
-    compile 'com.google.android.gms:play-services-auth:9.8.0'
+    compile 'com.google.android.gms:play-services-auth:10.2.0'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
@@ -44,7 +45,8 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:9.6.0'
     compile 'com.github.ybq:Android-SpinKit:1.0.4'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
-
+    // font
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 
 }
 
